login redirect view

--- a/golf-ui/src/app/login/login.component.html
+++ b/golf-ui/src/app/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="row justify-content-center">
+<div class=" justify-content-center">
   <div *ngIf="0<loginErrorMsg.length" class="alert alert-warning alert-dismissible fade show" role="alert">
     <strong>{{loginErrorMsg}}</strong>
     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
