--- a/golf-ui/src/app/header/header.component.html
+++ b/golf-ui/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
+<nav class="header navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
     
   <div class="container">
     <a class="navbar-brand" href="#">GOLF OMS</a>
