--- a/golf-ui/src/app/order-details/order-details.component.html
+++ b/golf-ui/src/app/order-details/order-details.component.html
@@ -1,11 +1,11 @@
-<div>
+<div class="container">
 
   <h3>Order details: <span *ngIf="order" style="color: royalblue">{{order.number}}</span> </h3>
 
   <div *ngIf="order" class="row">
     <form class="form" #orderForm="ngForm" (ngSubmit)="submitForm()">
       <div class="row">
-        <div class="col-6">
+        <div class="col-6" style="width: fit-content;">
           <div class="form-group">
             <label>Order Number:</label>
             <input [(ngModel)]="order.number" name="orderNumber" class="form-control" type="text" id="number" required
@@ -43,9 +43,9 @@
                 <table class="table table-striped">
                   <thead>
                     <tr>
-                      <th scope="col">Component Code</th>
-                      <th scope="col">Quantity</th>
-                      <th scope="col">
+                      <th >Code</th>
+                      <th>Quantity</th>
+                      <th >
                         <div class="btn btn-success " (click)="addNewComponent()">Add</div>
                       </th>
 
@@ -53,7 +53,7 @@
                   </thead>
                   <tbody>
 
-                    <div *ngIf="0 < order.components.length">
+                    
                       <tr *ngFor="let item of order.components; let i=index;">
                         <td>
                           <input #cmpCode class="form-control" type="text" 
@@ -67,7 +67,7 @@
                           <div class="btn btn-danger" (click)="deleteComponent(i)">delete</div>
                         </td>
                       </tr>
-                    </div>
+                    
                   </tbody>
                 </table>
                 
