--- a/golf-ui/src/app/app.component.html
+++ b/golf-ui/src/app/app.component.html
@@ -8,7 +8,7 @@
   <div class="container-fluid text-center app-wrapper" >
     <div class="row content content-wrapper">
       <app-sidebar></app-sidebar>
-      <div class="col-8 mt-5 pt-5 justify-content-center"> 
+      <div class="card app-content col-8 mx-5 mb-5 px-3 py-3" > 
           <router-outlet></router-outlet>
 
       </div>
