--- a/golf-ui/src/app/import-csv/import-csv.component.html
+++ b/golf-ui/src/app/import-csv/import-csv.component.html
@@ -1,11 +1,14 @@
 <div class="container">
   
-  <h5>Import from csv</h5>
-  <div class="row">
-    <div class="col-4">
+  <h3>Import from csv</h3>
+  <div class="row ">
+    <div class="col-10">
+      
       <div class="input-group">
-        
-        <div class="custom-file">
+         <div class="mr-4 pt-2">
+            <h5>Select file:</h5>
+         </div>
+        <div class="custom-file col-6">
           <input type="file" accept=".csv" class="custom-file-input" id="inputGroupFile"
             aria-describedby="inputGroupFile" (change)="onCsvSelected($event)">
           <label id="inputGroupFileLabel" class="custom-file-label" for="inputGroupFile" >Choose file</label>
@@ -15,20 +18,23 @@
     </div>
 
   </div>
-  <div *ngIf=" 0< procesedResults.size" class="py-5">
+  <div  class="row py-5" *ngIf=" 0< procesedResults.size">
     <h5>Results</h5>
-    <div class="row">
+    <div class="">
       <h5 class="col">
         <span style="color: darkgreen">{{okOrdersCount}} </span>
         orders imported</h5>
 
       <div class="col">
 
-        <h5><span style="color: red">{{errorOrdersCount}}</span> orders failed</h5>
-        <i class="fas fa-arrow-circle-down" data-toggle="collapse" data-target="#collapsedPanel" aria-expanded="false"
-          aria-controls="collapsePanel"></i>
+        <h5><span style="color: red">{{errorOrdersCount}}</span> orders failed <span>
+            <i *ngIf="0<errorOrdersCount" class="fa fa-arrow-circle-down" data-toggle="collapse" data-target="#collapsedPanel" aria-expanded="false"
+            aria-controls="collapsePanel"></i>
+        </span>
+        </h5>
+        
 
-        <div class="col-4 collapse " id="collapsedPanel">
+        <div class="collapse " id="collapsedPanel">
           <ul class="list-group">
             <li class="list-group-item" *ngFor="let errorOrder of errorOrders; let i= index;">
                {{errorOrder}} 
@@ -41,9 +47,14 @@
     </div>
   </div>
 
-  <div class="fixed-row row">
-    <button class="btn btn-danger" (click)="backNavigation()">
-      <a>Back</a>
+  <div class="row fixed-row   ">
+    <div class="col-4">
+    <button class="btn btn-danger btn-block" (click)="backNavigation()">
+      <div>
+      <span class="fa fa-arrow-left"></span>
+      Back
+    </div>
     </button>
+  </div>
   </div>
 </div>
