--- a/golf-ui/src/app/order-details/order-details.component.html
+++ b/golf-ui/src/app/order-details/order-details.component.html
@@ -2,10 +2,10 @@
 
   <h3>Order details: <span *ngIf="order" style="color: royalblue">{{order.number}}</span> </h3>
 
-  <div *ngIf="order" class="row">
+  <div *ngIf="order" >
     <form class="form" #orderForm="ngForm" (ngSubmit)="submitForm()">
       <div class="row">
-        <div class="col-6" style="width: fit-content;">
+        <div class="col-6">
           <div class="form-group">
             <label>Order Number:</label>
             <input [(ngModel)]="order.number" name="orderNumber" class="form-control" type="text" id="number" required
@@ -33,7 +33,7 @@
           </div>
         </div>
 
-        <div *ngIf="order && order.components" class="col-6">
+        <div *ngIf="order && order.components" class="col">
           <div>
             <div>
               <!--TODO: REFACTOR  -->
@@ -57,11 +57,11 @@
                       <tr *ngFor="let item of order.components; let i=index;">
                         <td>
                           <input #cmpCode class="form-control" type="text" 
-                            [(ngModel)]="item.componentCode" name="componentCode-{{i}}">
+                            [(ngModel)]="item.componentCode" name="componentCode-{{i}}" placeholder="component code">
                         </td>
                         <td>
-                          <input class="form-control" type="number" [(ngModel)]="item.componentQuantity"
-                            name="componentQuantity-{{i}}">
+                          <input class="form-control" type="number" min="0" [(ngModel)]="item.componentQuantity"
+                            name="componentQuantity-{{i}}" placeholder="quantity">
                         </td>
                         <td>
                           <div class="btn btn-danger" (click)="deleteComponent(i)">delete</div>
@@ -77,17 +77,17 @@
         </div>
 
       </div>
-      <div class="row">
-        <div class="col">
-          <div class="btn btn-danger" (click)="navigateBack()">Cancel</div>
+      <div class="row justify-content-between">
+        <div class="col-4">
+          <div class="btn btn-danger btn-block" (click)="navigateBack()">Cancel</div>
         </div>
-        <div class="col">
+        <div class="col-4">
           <div *ngIf="isAddOrder; else updateBlock">
-            <button class="btn btn-success" type="submit" [disabled]="!orderForm.valid">Add new order</button>
+            <button class="btn btn-success btn-block" type="submit" [disabled]="!orderForm.valid">Add new order</button>
 
           </div>
           <ng-template #updateBlock>
-            <button class="btn btn-danger" type="submit" [disabled]="!orderForm.valid || !orderForm.dirty">Update
+            <button class="btn btn-danger btn-block" type="submit" [disabled]="!orderForm.valid || !orderForm.dirty">Update
               Order</button>
 
           </ng-template>
@@ -96,7 +96,7 @@
 
     </form>
 
-    {{logger()}}
+    <!-- {{logger()}} -->
   </div>
 
 
