--- a/golf-ui/src/app/order-list/order-list.component.html
+++ b/golf-ui/src/app/order-list/order-list.component.html
@@ -20,7 +20,7 @@
         <thead>
           <tr>
             <th scope="col">Order number</th>
-            <th scope="col">Date requiered</th>
+            <th scope="col">Date required</th>
             <th scope="col">Description</th>
             <th scope="col">No. of components</th>
             <th scope="col">Date created</th>
